# can_log_viewer

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
backend/: __init__.py  cache.py  cache_query.py  cli.py  dbc.py  decoder.py  readers.py  warnings.py
backend/resources/: __init__.py  default.dbc
docs/: architecture.md  requirements.md  task_plan.md  ui_policy.md  use_case.md  use_cases.md
scripts/: backend_python_dev.sh  build_backend_executable.py  dev_tauri_python.sh  generate_sample_blf.py
src/: App.tsx  backend.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: SignalSidebar.css  SignalSidebar.tsx  Timeline.css  Timeline.tsx  TimelineLane.css  TimelineLane.tsx  Topbar.css  Topbar.tsx
src/hooks/: useLogSession.ts  useRecentSignals.ts  useReferenceLines.ts  useSignalQuery.ts  useSignalSelection.ts  useStatus.ts  useTimelineExport.ts  useTimelineView.ts  useTransitionMarkers.ts
src/lib/: constants.ts  pngExport.ts  recentSignals.ts  signalIdentity.ts  strings.ts  timeline.ts  warnings.ts
src/styles/: base.css
tests/: test_backend_decode.py  test_backend_query.py  test_sample_blf_script.py
tests/web/: recentSignals.test.ts  signalSelection.test.ts  timeline.test.ts
