[package]
name = "can-log-viewer"
version = "0.1.0"
description = "CAN log viewer frontend skeleton"
edition = "2021"

[lib]
name = "can_log_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

